added social media

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Tony Pan | Welcome to my site</title>
   </head>
 
   <body>
   <!-- As a link -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Tony Pan</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,6 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
           <a class="nav-item nav-link" href="about.html">About Me</a>
         </div>
       </div>
@@ -29,11 +32,39 @@
         <div class="overlay"></div>
         <div class="description">
             <h1>You have found my personal website!</h1>
-            <p>Welcome! I am a Computer Science student and research assistant at the University of Michigan 
-              College of Engineering. Explore this site to learn more about me.
+            <p>Welcome! My name is Tony Pan. I am a Computer Science student and research assistant 
+              at the University of Michigan College of Engineering. 
+              Explore this site to learn more about me.
             </p>
-          </div>
+        </div>
 </header>
+
+<footer class="page-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 col-md-6 col-sm-12">
+        <div class="card" style="width: 18rem;">
+          <div class="card-header">
+            Links
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="about.html">About Me</a>
+          </div>
+        </div>
+        </div>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12">
+      <h6 class="text-uppercase font-weight-bold">Connect with Me</h6>
+      <p>Email: tonypan2000@gmail.com</p>
+      <a href="https://twitter.com/tonypan2000" target="_blank" class="fa fa-twitter"></a>
+      <a href="https://linkedin.com/in/tony-pan" target="_blank" class="fa fa-linkedin"></a>
+      <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"></a>
+    </div>
+  </div>
+  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos by Tony Pan</div>
+  </div>
+</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
