--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
         </div>
 </header>
 
+<div class="education">
+  <img src="images/education.jpg" class="img-fluid" alt="Responsive image">
+  <div class="overlay"></div>
+
+</div>
+
+
 <footer class="page-footer">
   <div class="container">
     <div class="row">
@@ -56,7 +63,7 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
       <h6 class="text-uppercase font-weight-bold">Connect with Me</h6>
-      <p>Email: tonypan2000@gmail.com</p>
+      <a href="mailto:tonypan2000@gmail.com">Email: tonypan2000@gmail.com</a> <br>
       <a href="https://twitter.com/tonypan2000" target="_blank" class="fa fa-twitter"></a>
       <a href="https://linkedin.com/in/tony-pan" target="_blank" class="fa fa-linkedin"></a>
       <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"></a>
