--- a/index.html
+++ b/index.html
@@ -42,7 +42,75 @@
 <div class="education">
   <img src="images/education.jpg" class="img-fluid" alt="Responsive image">
   <div class="overlay"></div>
-
+  <div class="course-description">
+      <h1>Education</h1>
+      <p>I am currently a sophomore at the University of Michigan college of Engineering pursuing 
+        a degree in Computer Science Engineering. Here are the relevant courses that I have taken
+        or am enrolled this year.
+      </p>
+      <div class="row">
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">EECS 467 Autonomous Robotics Design Experience</h5>
+                <h6>Fall 2019</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">MATH 217 Linear Algebra</h5>
+                <h6>Fall 2019</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+      <br>
+      <div class="row">
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">EECS 281 Data Structure and Algorithm</h5>
+                <h6>Winter 2019</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">EECS 370 Introduction to Computer Organization</h5>
+                <h6>Winter 2019</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+      <br>
+      <div class="row">
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">EECS 280 Programming and Introductory Data Structure</h5>
+                <h6>Fall 2018</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+              <div class="card-body">
+                <h5 class="card-title">EECS 203 Discrete Mathematics</h5>
+                <h6>Fall 2018</h6>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+  </div>
 </div>
 
 
