--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 
   <body>
   <!-- As a link -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Tony Pan</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
-          <a class="nav-item nav-link" href="about.html">About Me</a>
+  <nav class="navbar navbar-default navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Tony Pan</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" href="about.html">About Me</a>
+    </div>
         </div>
       </div>
     </nav>
@@ -37,17 +39,23 @@
               Explore this site to learn more about me.
             </p>
         </div>
+        <div class="scroll"> 
+          <a href="#section1"><span></span></a>
+        </div>
 </header>
 
-<div class="education">
-  <img src="images/education.jpg" class="img-fluid" alt="Responsive image">
-  <div class="overlay"></div>
+<div class="education" id="section1">
+  <div class="second-overlay"></div>
+  <div class="container">
   <div class="course-description">
-      <h1>Education</h1>
-      <p>I am currently a sophomore at the University of Michigan college of Engineering pursuing 
-        a degree in Computer Science Engineering. Here are the relevant courses that I have taken
-        or am enrolled this year.
-      </p>
+      <br>
+      <div class="card">
+            <h1>Education</h1>
+            <p>I am currently a sophomore at the University of Michigan college of Engineering pursuing 
+                a degree in Computer Science Engineering. Here are the relevant courses that I have taken
+                or am enrolled this year.</p>
+        </div>
+        <br>
       <div class="row">
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3">
@@ -112,6 +120,10 @@
       </div>
   </div>
 </div>
+<div class="scroll"> 
+    <a href="#section2"><span></span></a>
+</div>
+</div>
 
 
 <footer class="page-footer">
@@ -137,7 +149,7 @@
       <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"></a>
     </div>
   </div>
-  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos by Tony Pan</div>
+  <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
   </div>
 </footer>
 
