--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 </header>
 
-<div class="education" id="section1">
+<section class="education" id="section1">
   <div class="second-overlay"></div>
   <div class="container">
   <div class="course-description">
@@ -123,8 +123,21 @@
 <div class="scroll"> 
     <a href="#section2"><span></span></a>
 </div>
-</div>
+</section>
 
+<section class="research" id="section2">
+    <div class="second-overlay"></div>
+        <div class="container">
+            <div class="course-description">
+                <br>
+                <div class="card">
+                      <h1>Research</h1>
+                      <p>I am passionate about scientific research. Here are some of my research projects</p>
+                  </div>
+                  <br>
+                  </div>
+          </div>
+  </section>
 
 <footer class="page-footer">
   <div class="container">
