--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="course-description">
       <br>
       <div class="card">
-            <h1>Education</h1>
+            <h2>Education</h2>
             <p>I am currently a sophomore at the University of Michigan college of Engineering pursuing 
                 a degree in Computer Science Engineering. Here are the relevant courses that I have taken
                 or am enrolled this year.</p>
@@ -59,41 +59,32 @@
       <div class="row">
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">EECS 467 Autonomous Robotics Design Experience</h5>
-                <h6>Fall 2019</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
+                <div class="card-body" id="headingOne">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        EECS 467 Autonomous Robotics Design Experience<br>
+                        <small>Fall 2019</small>
+                    </button>
+                </div>
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">MATH 217 Linear Algebra</h5>
-                <h6>Fall 2019</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-      <br>
-      <div class="row">
-          <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">EECS 281 Data Structure and Algorithm</h5>
-                <h6>Winter 2019</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">EECS 370 Introduction to Computer Organization</h5>
-                <h6>Winter 2019</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
+                <div class="card-body" id="headingTwo">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                        MATH 217 Linear Algebra<br>
+                        <small>Fall 2019</small>
+                    </button>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
             </div>
           </div>
       </div>
@@ -101,20 +92,65 @@
       <div class="row">
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">EECS 280 Programming and Introductory Data Structure</h5>
-                <h6>Fall 2018</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
+                <div class="card-body" id="headingThree">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                        EECS 281 Data Structure and Algorithm<br>
+                        <small>Winter 2019</small>
+                    </button>
+                </div>
+                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
             </div>
           </div>
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3">
-              <div class="card-body">
-                <h5 class="card-title">EECS 203 Discrete Mathematics</h5>
-                <h6>Fall 2018</h6>
-                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
+                <div class="card-body" id="headingFour">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                        EECS 370 Introduction to Computer Organization<br>
+                        <small>Winter 2019</small>
+                    </button>
+                </div>
+                <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+      </div>
+      <br>
+      <div class="row">
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+                <div class="card-body" id="headingFive">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
+                        EECS 280 Programming and Introductory Data Structure<br>
+                        <small>Fall 2018</small>
+                    </button>
+                </div>
+                <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
+            </div>
+          </div>
+          <div class="col-sm-6">
+            <div class="card text-white bg-warning mb-3">
+                <div class="card-body" id="headingSix">
+                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
+                        EECS 203 Discrete Mathematics<br>
+                        <small>Fall 2018</small>
+                    </button>
+                </div>
+                <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                  <div class="card-body">
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                </div>
             </div>
           </div>
       </div>
@@ -131,7 +167,7 @@
             <div class="course-description">
                 <br>
                 <div class="card">
-                      <h1>Research</h1>
+                      <h2>Research</h2>
                       <p>I am passionate about scientific research. Here are some of my research projects</p>
                   </div>
                   <br>
