work in progress

--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         </div>
 </header>
 
-<section class="education" id="section1">
-  <div class="second-overlay"></div>
+<section class="education" id="section1" style="height: 625px;">
   <div class="container">
   <div class="course-description">
-      <br>
+      <br><br>
       <div class="card">
             <h2>Education</h2>
             <p>I am currently a sophomore at the University of Michigan college of Engineering pursuing 
@@ -58,13 +57,11 @@
         <br>
       <div class="row">
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingOne">
+            <div class="card text-white bg-warning mb-3" id="headingOne">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         EECS 467 Autonomous Robotics Design Experience<br>
                         <small>Fall 2019</small>
                     </button>
-                </div>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -73,13 +70,11 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingTwo">
+            <div class="card text-white bg-warning mb-3" id="headingTwo">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                         MATH 217 Linear Algebra<br>
                         <small>Fall 2019</small>
                     </button>
-                </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -91,13 +86,11 @@
       <br>
       <div class="row">
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingThree">
+            <div class="card text-white bg-warning mb-3"  id="headingThree">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                         EECS 281 Data Structure and Algorithm<br>
                         <small>Winter 2019</small>
                     </button>
-                </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -106,13 +99,11 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingFour">
+            <div class="card text-white bg-warning mb-3" id="headingFour">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                         EECS 370 Introduction to Computer Organization<br>
                         <small>Winter 2019</small>
                     </button>
-                </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -124,13 +115,11 @@
       <br>
       <div class="row">
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingFive">
+            <div class="card text-white bg-warning mb-3" id="headingFive">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
                         EECS 280 Programming and Introductory Data Structure<br>
                         <small>Fall 2018</small>
                     </button>
-                </div>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -139,13 +128,11 @@
             </div>
           </div>
           <div class="col-sm-6">
-            <div class="card text-white bg-warning mb-3">
-                <div class="card-body" id="headingSix">
+            <div class="card text-white bg-warning mb-3" id="headingSix">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                         EECS 203 Discrete Mathematics<br>
                         <small>Fall 2018</small>
                     </button>
-                </div>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                   <div class="card-body">
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -156,22 +143,45 @@
       </div>
   </div>
 </div>
-<div class="scroll"> 
-    <a href="#section2"><span></span></a>
-</div>
 </section>
 
-<section class="research" id="section2">
-    <div class="second-overlay"></div>
+<section class="research" id="section2" style="height: 625px;">
         <div class="container">
-            <div class="course-description">
-                <br>
-                <div class="card">
+            <div class="research-description">
+                <br><br>
+                <div class="card research-card">
                       <h2>Research</h2>
                       <p>I am passionate about scientific research. Here are some of my research projects</p>
                   </div>
                   <br>
                   </div>
+                  <div class="card-deck">
+                      <div class="card research-card">
+                        <img class="card-img-top" src="images/publication.jpg" alt="SPIE Photonics West">
+                        <div class="card-body">
+                          <h5 class="card-title">Publication</h5>
+                          <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
+                          <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                          <p class="card-text"><small class="text-muted">Published February 2019</small></p>
+                        </div>
+                      </div>
+                      <div class="card research-card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                      <div class="card research-card">
+                        <img class="card-img-top" src="..." alt="Card image cap">
+                        <div class="card-body">
+                          <h5 class="card-title">Card title</h5>
+                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                      </div>
+                    </div>
           </div>
   </section>
 
@@ -192,10 +202,10 @@
     </div>
     <div class="col-lg-6 col-md-6 col-sm-12">
       <h6 class="text-uppercase font-weight-bold">Connect with Me</h6>
-      <a href="mailto:tonypan2000@gmail.com">Email: tonypan2000@gmail.com</a> <br>
-      <a href="https://twitter.com/tonypan2000" target="_blank" class="fa fa-twitter"></a>
-      <a href="https://linkedin.com/in/tony-pan" target="_blank" class="fa fa-linkedin"></a>
-      <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"></a>
+      <a href="mailto:tonypan2000@gmail.com">Email: tonypan2000@gmail.com</a><br>
+      <a href="https://twitter.com/tonypan2000" target="_blank" class="fa fa-twitter"> tonypan2000</a><br>
+      <a href="https://linkedin.com/in/tony-pan" target="_blank" class="fa fa-linkedin"> tony-pan</a><br>
+      <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"> tonypan2000</a>
     </div>
   </div>
   <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
