scroll, programming, reduce image size

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3" id="headingOne">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        EECS 467 Autonomous Robotics Design Experience<br>
-                        <small>Fall 2019</small>
+                        Autonomous Robotics Design Experience<br>
+                        <small>EECS 467, Fall 2019</small>
                     </button>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                   <div class="card-body">
@@ -72,8 +72,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3" id="headingTwo">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        MATH 217 Linear Algebra<br>
-                        <small>Fall 2019</small>
+                        Linear Algebra<br>
+                        <small>MATH 217, Fall 2019</small>
                     </button>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                   <div class="card-body">
@@ -88,8 +88,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3"  id="headingThree">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
-                        EECS 281 Data Structure and Algorithm<br>
-                        <small>Winter 2019</small>
+                        Data Structure and Algorithm<br>
+                        <small>EECS 281, Winter 2019</small>
                     </button>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
@@ -101,8 +101,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3" id="headingFour">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
-                        EECS 370 Introduction to Computer Organization<br>
-                        <small>Winter 2019</small>
+                        Introduction to Computer Organization<br>
+                        <small>EECS 370, Winter 2019</small>
                     </button>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                   <div class="card-body">
@@ -117,8 +117,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3" id="headingFive">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
-                        EECS 280 Programming and Introductory Data Structure<br>
-                        <small>Fall 2018</small>
+                        Programming and Introductory Data Structure<br>
+                        <small>EECS 280, Fall 2018</small>
                     </button>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body">
@@ -130,8 +130,8 @@
           <div class="col-sm-6">
             <div class="card text-white bg-warning mb-3" id="headingSix">
                     <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
-                        EECS 203 Discrete Mathematics<br>
-                        <small>Fall 2018</small>
+                        Discrete Mathematics<br>
+                        <small>EECS 203, Fall 2018</small>
                     </button>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                   <div class="card-body">
@@ -153,37 +153,117 @@
                       <h2>Research</h2>
                       <p>I am passionate about scientific research. Here are some of my research projects</p>
                   </div>
-                  <br>
+              </div>
+              <section class="carousel slide" data-ride="carousel" id="postsCarousel">
+                  <div class="container">
+                      <div class="row">
+                          <div class="col-xs-12 text-md-right lead">
+                              <a class="btn btn-success active prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
+                              Click to Scroll
+                              <a class="btn btn-success active next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
+                          </div>
+                      </div>
                   </div>
-                  <div class="card-deck">
-                      <div class="card research-card">
-                        <img class="card-img-top" src="images/publication.jpg" alt="SPIE Photonics West">
-                        <div class="card-body">
-                          <h5 class="card-title">Publication</h5>
-                          <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
-                          <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
-                          <p class="card-text"><small class="text-muted">Published February 2019</small></p>
-                        </div>
+                  <div class="container p-t-0 m-t-2 carousel-inner">
+                      <div class="row row-equal carousel-item active m-t-0">
+                          <div class="col-md-4">
+                              <div class="card research-card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="images/publication.jpg" alt="SPIE Photonics West">
+                                  </div>
+                                  <div class="card-body">
+                                      <h5 class="card-title">Publication</h5>
+                                      <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
+                                      <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                      <p class="card-text"><small class="text-muted">Published in March 2019</small></p>
+                                    </div>
+                              </div>
+                          </div>
+                          <div class="col-md-4">
+                              <div class="card  research-card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="images/weizmann.jpg" alt="Weizmann">
+                                  </div>
+                                  <div class="card-body">
+                                      <h5 class="card-title">Summer Research Fellow</h5>
+                                      <p class="card-text">International Summer Science Institute at the Weizamnn Institute of Science</p>
+                                      <a href="weizmann.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                      <p class="card-text"><small class="text-muted">Participated in July 2018</small></p>
+                                    </div>
+                              </div>
+                          </div>
+                          <div class="col-md-4">
+                              <div class="card  research-card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="#" alt="Carousel 3">
+                                  </div>
+                                  <div class="card-block p-t-2">
+                                      <h6 class="small text-wide p-b-2">Design</h6>
+                                      <h2>
+                                          <a href>Responsive is Essential.</a>
+                                      </h2>
+                                  </div>
+                              </div>
+                          </div>
                       </div>
-                      <div class="card research-card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
+                      <div class="row row-equal carousel-item m-t-0">
+                          <div class="col-md-4">
+                              <div class="card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="#" alt="Carousel 4">
+                                  </div>
+                                  <div class="card-block p-t-2">
+                                      <h6 class="small text-wide p-b-2">Another</h6>
+                                      <h2>
+                                          <a href>Tagline or Call-to-action.</a>
+                                      </h2>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-md-4">
+                              <div class="card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="#" alt="Carousel 5">
+                                  </div>
+                                  <div class="card-block p-t-2">
+                                      <h6 class="small text-wide p-b-2"><span class="pull-xs-right">12.04</span> Category 1</h6>
+                                      <h2>
+                                          <a href>This is a Blog Title.</a>
+                                      </h2>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-md-4 fadeIn wow">
+                              <div class="card">
+                                  <div class="card-img-top card-img-top-250">
+                                      <img class="img-fluid" src="#" alt="Carousel 6">
+                                  </div>
+                                  <div class="card-block p-t-2">
+                                      <h6 class="small text-wide p-b-2">Category 3</h6>
+                                      <h2>
+                                          <a href>Catchy Title of a Blog Post.</a>
+                                      </h2>
+                                  </div>
+                              </div>
+                          </div>
                       </div>
-                      <div class="card research-card">
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                        </div>
-                      </div>
-                    </div>
+                  </div>
+              </section>
           </div>
   </section>
+
+  <section class="programming" id="section3" style="height: 625px;">
+    <div class="container">
+        <div class="programming-description">
+            <br><br>
+            <div class="card programming-card">
+                  <h2>Programming</h2>
+                  <p>I love coding. Here are some of my recent projects</p>
+              </div>
+              <br>
+              </div>
+      </div>
+      </section>
 
 <footer class="page-footer">
   <div class="container">
