--- a/index.html
+++ b/index.html
@@ -148,107 +148,58 @@
 <section class="research" id="section2" style="height: 625px;">
         <div class="container">
             <div class="research-description">
-                <br><br>
+                <br>
                 <div class="card research-card">
                       <h2>Research</h2>
                       <p>I am passionate about scientific research. Here are some of my research projects</p>
                   </div>
               </div>
-              <section class="carousel slide" data-ride="carousel" id="postsCarousel">
-                  <div class="container">
-                      <div class="row">
-                          <div class="col-xs-12 text-md-right lead">
-                              <a class="btn btn-success active prev" href="" title="go back"><i class="fa fa-lg fa-chevron-left"></i></a>
-                              Click to Scroll
-                              <a class="btn btn-success active next" href="" title="more"><i class="fa fa-lg fa-chevron-right"></i></a>
+              <div id="carousel-example-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
+                  <!--Controls-->
+                  <div class="row">
+                      <button class="btn btn-primary btn-arrow-left" href="#carousel-example-multi" data-slide="prev">Prev</button>
+                      <button class="btn btn-primary btn-arrow-right" href="#carousel-example-multi" data-slide="next">Next</button>
+                    </div>
+                  <!--/.Controls-->
+                  <!-- Indicators -->
+                  <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-multi" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-multi" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-multi" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-multi" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-multi" data-slide-to="4"></li>
+                    <li data-target="#carousel-example-multi" data-slide-to="5"></li>
+                  </ol>
+                  <!--/.Indicators-->
+                  <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                        <div class="carousel-item col-md-4 active">
+                            <div class="card research-card">
+                              <div class="card-img-top card-img-top-250">
+                                  <img class="img-fluid" src="images/publication.jpg" alt="SPIE Photonics West">
+                              </div>
+                              <div class="card-body">
+                                  <h5 class="card-title">Publication</h5>
+                                  <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
+                                  <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                  <p class="card-text"><small class="text-muted">Published in March 2019</small></p>
+                                </div>
                           </div>
-                      </div>
-                  </div>
-                  <div class="container p-t-0 m-t-2 carousel-inner">
-                      <div class="row row-equal carousel-item active m-t-0">
-                          <div class="col-md-4">
+                          </div>
+                          <div class="carousel-item col-md-4">
                               <div class="card research-card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="images/publication.jpg" alt="SPIE Photonics West">
+                                <div class="card-img-top card-img-top-250">
+                                    <img class="img-fluid" src="images/weizmann.jpg" alt="Weizmann">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Summer Research Fellow</h5>
+                                    <p class="card-text">International Summer Science Institute at the Weizamnn Institute of Science</p>
+                                    <a href="weizmann.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
+                                    <p class="card-text"><small class="text-muted">Participated in July 2018</small></p>
                                   </div>
-                                  <div class="card-body">
-                                      <h5 class="card-title">Publication</h5>
-                                      <p class="card-text">Machine Learning Assisted Blood Vessel Segmentation in Laser Speckle Imaging</p>
-                                      <a href="spie.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
-                                      <p class="card-text"><small class="text-muted">Published in March 2019</small></p>
-                                    </div>
-                              </div>
-                          </div>
-                          <div class="col-md-4">
-                              <div class="card  research-card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="images/weizmann.jpg" alt="Weizmann">
-                                  </div>
-                                  <div class="card-body">
-                                      <h5 class="card-title">Summer Research Fellow</h5>
-                                      <p class="card-text">International Summer Science Institute at the Weizamnn Institute of Science</p>
-                                      <a href="weizmann.html" target="_blank" class="btn btn-outline-danger btn-sm">Details</a>
-                                      <p class="card-text"><small class="text-muted">Participated in July 2018</small></p>
-                                    </div>
-                              </div>
-                          </div>
-                          <div class="col-md-4">
-                              <div class="card  research-card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="#" alt="Carousel 3">
-                                  </div>
-                                  <div class="card-block p-t-2">
-                                      <h6 class="small text-wide p-b-2">Design</h6>
-                                      <h2>
-                                          <a href>Responsive is Essential.</a>
-                                      </h2>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="row row-equal carousel-item m-t-0">
-                          <div class="col-md-4">
-                              <div class="card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="#" alt="Carousel 4">
-                                  </div>
-                                  <div class="card-block p-t-2">
-                                      <h6 class="small text-wide p-b-2">Another</h6>
-                                      <h2>
-                                          <a href>Tagline or Call-to-action.</a>
-                                      </h2>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-md-4">
-                              <div class="card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="#" alt="Carousel 5">
-                                  </div>
-                                  <div class="card-block p-t-2">
-                                      <h6 class="small text-wide p-b-2"><span class="pull-xs-right">12.04</span> Category 1</h6>
-                                      <h2>
-                                          <a href>This is a Blog Title.</a>
-                                      </h2>
-                                  </div>
-                              </div>
-                          </div>
-                          <div class="col-md-4 fadeIn wow">
-                              <div class="card">
-                                  <div class="card-img-top card-img-top-250">
-                                      <img class="img-fluid" src="#" alt="Carousel 6">
-                                  </div>
-                                  <div class="card-block p-t-2">
-                                      <h6 class="small text-wide p-b-2">Category 3</h6>
-                                      <h2>
-                                          <a href>Catchy Title of a Blog Post.</a>
-                                      </h2>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </section>
+                            </div>
+                            </div>
+                  </div>    
+            </div>
           </div>
   </section>
 
