--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
       </div>
   </div>
 </div>
+<div class="scroll"> 
+    <a href="#section2"><span></span></a>
+  </div>
 </section>
 
 <section class="research" id="section2" style="height: 625px;">
@@ -156,9 +159,9 @@
               </div>
               <div id="carousel-example-multi" class="carousel slide carousel-multi-item v-2" data-ride="carousel">
                   <!--Controls-->
-                  <div class="row">
-                      <button class="btn btn-primary btn-arrow-left" href="#carousel-example-multi" data-slide="prev">Prev</button>
-                      <button class="btn btn-primary btn-arrow-right" href="#carousel-example-multi" data-slide="next">Next</button>
+                  <div class="row" id="controls">
+                      <a class="btn btn-primary btn-sm btn-arrow-left" href="#carousel-example-multi" data-slide="prev">Prev</a>
+                      <a class="btn btn-primary btn-sm btn-arrow-right" href="#carousel-example-multi" data-slide="next">Next</a>
                     </div>
                   <!--/.Controls-->
                   <!-- Indicators -->
@@ -201,6 +204,9 @@
                   </div>    
             </div>
           </div>
+          <div class="scroll"> 
+              <a href="#section3"><span></span></a>
+            </div>
   </section>
 
   <section class="programming" id="section3" style="height: 625px;">
@@ -213,6 +219,32 @@
               </div>
               <br>
               </div>
+              <div class="row">
+                  <div class="col-4">
+                    <div class="list-group" id="list-tab" role="tablist">
+                      <a class="list-group-item list-group-item-action active show" id="list-research-list" data-toggle="tab" href="#list-research" role="tab" aria-controls="list-research" aria-selected="true">Research</a>
+                      <a class="list-group-item list-group-item-action" id="list-Websites-list" data-toggle="tab" href="#list-Websites" role="tab" aria-controls="list-Websites" aria-selected="false">Websites</a>
+                      <a class="list-group-item list-group-item-action" id="list-Java-list" data-toggle="tab" href="#list-Java" role="tab" aria-controls="list-Java" aria-selected="false">Java Projects</a>
+                      <a class="list-group-item list-group-item-action" id="list-Other-list" data-toggle="tab" href="#list-Other" role="tab" aria-controls="list-Other" aria-selected="false">Other</a>
+                    </div>
+                  </div>
+                  <div class="col-8">
+                    <div class="tab-content" id="nav-tabContent">
+                      <div class="tab-pane fade active show" id="list-research" role="tabpanel" aria-labelledby="list-research-list">
+                        <p>Velit aute mollit ipsum ad dolor consectetur nulla officia culpa adipisicing exercitation fugiat tempor. Voluptate deserunt sit sunt nisi aliqua fugiat proident ea ut. Mollit voluptate reprehenderit occaecat nisi ad non minim tempor sunt voluptate consectetur exercitation id ut nulla. Ea et fugiat aliquip nostrud sunt incididunt consectetur culpa aliquip eiusmod dolor. Anim ad Lorem aliqua in cupidatat nisi enim eu nostrud do aliquip veniam minim.</p>
+                      </div>
+                      <div class="tab-pane fade" id="list-Websites" role="tabpanel" aria-labelledby="list-Websites-list">
+                        <p>Cupidatat quis ad sint excepteur laborum in esse qui. Et excepteur consectetur ex nisi eu do cillum ad laborum. Mollit et eu officia dolore sunt Lorem culpa qui commodo velit ex amet id ex. Officia anim incididunt laboris deserunt anim aute dolor incididunt veniam aute dolore do exercitation. Dolor nisi culpa ex ad irure in elit eu dolore. Ad laboris ipsum reprehenderit irure non commodo enim culpa commodo veniam incididunt veniam ad.</p>
+                      </div>
+                      <div class="tab-pane fade" id="list-Java" role="tabpanel" aria-labelledby="list-Java-list">
+                        <p>Ut ut do pariatur aliquip aliqua aliquip exercitation do nostrud commodo reprehenderit aute ipsum voluptate. Irure Lorem et laboris nostrud amet cupidatat cupidatat anim do ut velit mollit consequat enim tempor. Consectetur est minim nostrud nostrud consectetur irure labore voluptate irure. Ipsum id Lorem sit sint voluptate est pariatur eu ad cupidatat et deserunt culpa sit eiusmod deserunt. Consectetur et fugiat anim do eiusmod aliquip nulla laborum elit adipisicing pariatur cillum.</p>
+                      </div>
+                      <div class="tab-pane fade" id="list-Other" role="tabpanel" aria-labelledby="list-Other-list">
+                        <p>Irure enim occaecat labore sit qui aliquip reprehenderit amet velit. Deserunt ullamco ex elit nostrud ut dolore nisi officia magna sit occaecat laboris sunt dolor. Nisi eu minim cillum occaecat aute est cupidatat aliqua labore aute occaecat ea aliquip sunt amet. Aute mollit dolor ut exercitation irure commodo non amet consectetur quis amet culpa. Quis ullamco nisi amet qui aute irure eu. Magna labore dolor quis ex labore id nostrud deserunt dolor eiusmod eu pariatur culpa mollit in irure.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
       </div>
       </section>
 
@@ -236,7 +268,8 @@
       <a href="mailto:tonypan2000@gmail.com">Email: tonypan2000@gmail.com</a><br>
       <a href="https://twitter.com/tonypan2000" target="_blank" class="fa fa-twitter"> tonypan2000</a><br>
       <a href="https://linkedin.com/in/tony-pan" target="_blank" class="fa fa-linkedin"> tony-pan</a><br>
-      <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"> tonypan2000</a>
+      <a href="https://github.com/tonypan2000" target="_blank" class="fa fa-github"> tonypan2000</a><br><br>
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     </div>
   </div>
   <div class="footer-copyright text-center">© 2019 Copyright: Tony Pan. Photos taken by Tony Pan</div>
