--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             Links
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
           </div>
         </div>
