remove background, add course description

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="tonypan_resume.pdf">Resume</a>
+            <a class="nav-item nav-link" target="_blank" href="files/tonypan_resume.pdf">Resume</a>
             <a class="nav-item nav-link" href="about.html">About Me</a>
     </div>
         </div>
@@ -64,7 +64,11 @@
                     </button>
                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Software methods and implementation for robot perception, world mapping, 
+                      and control, using physical robots. Topics include: sensor, sensor processing, control, 
+                      motion planning, localization and mapping, and forward and inverse kinematics. 
+                      Multiple team projects, culminating in a major design experience (MDE) project.
+                    </p>
                   </div>
                 </div>
             </div>
@@ -77,7 +81,10 @@
                     </button>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">The topics covered include: systems of linear equations; matrix algebra; 
+                      vectors, vector spaces, and subspaces; geometry of Rn; linear dependence, bases, and dimension;
+                       linear transformations; Eigenvalues and Eigenvectors; diagonalization; inner products. 
+                       Throughout there is an emphasis on the concepts, logic, and methods of theoretical mathematics.</p>
                   </div>
                 </div>
             </div>
@@ -93,7 +100,10 @@
                     </button>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Introduction to algorithm analysis and O-notation; Fundamental data structures including 
+                      lists, stacks, queues, priority queues, hash tables, binary trees, search trees, balanced trees and graphs; 
+                      searching and sorting algorithms; recursive algorithms; basic graph algorithms; introduction to greedy algorithms
+                       and divide and conquer strategy. Several programming assignments.</p>
                   </div>
                 </div>
             </div>
@@ -106,7 +116,11 @@
                     </button>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">This course offers a basic understanding of how computers execute programs. 
+                       In EECS 370, you see how a low-level language is executed by the hardware, 
+                       and see how to put together basic, hardware building blocks to form the functional units of a computer. 
+                       You design and "build" simple computers at various levels of detail and describe the hardware in diagrams, 
+                       finite-state machines, and hardware simulators (written in C).</p>
                   </div>
                 </div>
             </div>
@@ -122,7 +136,10 @@
                     </button>
                 <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Techniques and algorithm development and effective programming, top-down analysis,
+                       structured programming, testing, and program correctness. Program language syntax and static and runtime semantics.
+                        Scope, procedure instantiation, recursion, abstract data types, and parameter passing methods. Structured data types,
+                         pointers, linked data structures, stacks, queues, arrays, records, and trees. </p>
                   </div>
                 </div>
             </div>
@@ -135,7 +152,10 @@
                     </button>
                 <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
                   <div class="card-body">
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <p class="card-text">Introduction to the mathematical foundations of computer science. 
+                      Topics covered include: propositional and predicate logic, set theory, function and relations,
+                       growth of functions and asymptotic notation, introduction to algorithms,
+                        elementary combinatorics and graph theory and discrete probability theory.</p>
                   </div>
                 </div>
             </div>
